style.css
/* ... */
@media (max-width: 1030px) {
  .first-section .section-wrapper .first-section-content .titles-wrapper .section-subtitle {
    align-self: start;
  }
}
.first-section .section-wrapper .first-section-atributes {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 20px;
  margin-top: 40px;
}
@media (max-width: 1030px) {
  .first-section .section-wrapper .first-section-atributes {
    grid-template-columns: repeat(2, 260px);
    margin-left: auto;
    margin-right: auto;
    gap: 30px;
  }
}
@media (max-width: 685px) {
  .first-section .section-wrapper .first-section-atributes {
    grid-template-columns: repeat(2, 240px);
    gap: 20px;
  }
}
@media (max-width: 590px) {
  .first-section .section-wrapper .first-section-atributes {
    grid-template-columns: repeat(2, 150px);
    gap: 8px;
  }
}
.first-section .section-wrapper .first-section-atributes .atribute {
  padding: 40px 27px 45px 40px;
  transition: all;
  transition-duration: 0.5s;
  cursor: pointer;
}
@media (max-width: 590px) {
  .first-section .section-wrapper .first-section-atributes .atribute {
    padding: 22px;
  }
}
.first-section .section-wrapper .first-section-atributes .atribute:hover {
  background-color: white;
  border-radius: 8px;
  box-shadow: 0 5.87px 31.33px rgba(155, 148, 148, 0.17);
}
.first-section .section-wrapper .first-section-atributes .atribute:hover .icon-background {
  background-color: #647b64;
  fill: white;
}
.first-section .section-wrapper .first-section-atributes .atribute:hover svg path {
  fill: white;
}
.first-section .section-wrapper .first-section-atributes .atribute .icon-background {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 48px;
  height: 48px;
  background-color: white;
  border-radius: 8px;
  transition: background-color;
  transition-duration: 0.5s;
}
@media (max-width: 590px) {
  .first-section .section-wrapper .first-section-atributes .atribute .icon-background {
    width: 25px;
    height: 25px;
  }
}
@media (max-width: 590px) {
  .first-section .section-wrapper .first-section-atributes .atribute .icon-background svg {
    width: 15px;
    height: 15px;
  }
}
.first-section .section-wrapper .first-section-atributes .atribute .atribute-title {
  text-transform: uppercase;
  font-size: 24px;
  font-weight: 500;
  color: #333333;
  margin-top: 16px;
  margin-bottom: 6px;
}
@media (max-width: 590px) {
  .first-section .section-wrapper .first-section-atributes .atribute .atribute-title {
    font-size: 12px;
  }
}
.first-section .section-wrapper .first-section-atributes .atribute .atribute-text {
  font-size: 13px;
  color: #4f4f4f;
  line-height: 1.32;
}
@media (max-width: 590px) {
  .first-section .section-wrapper .first-section-atributes .atribute .atribute-text {
    font-size: 8px;
  }
}

.second-section {
  padding-top: 70px;
  padding-bottom: 40px;
}
@media (max-width: 590px) {
  .second-section {
    padding-bottom: 35px;
    padding-top: 25px;
  }
}
@media (max-width: 1200px) {
  .second-section {
    overflow: hidden;
  }
}
@media (max-width: 1200px) {
  .second-section .section-wrapper {
    margin-left: 30px;
  }
}
.second-section .section-wrapper .titles-wrapper {
  align-items: center;
  margin-bottom: 56px;
}
@media (max-width: 590px) {
  .second-section .section-wrapper .titles-wrapper {
    margin-bottom: 16px;
  }
}
.second-section .section-wrapper .second-section-atributes {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 40px;
}
@media (max-width: 1200px) {
  .second-section .section-wrapper .second-section-atributes {
    grid-template-columns: repeat(3, 340px);
  }
}
@media (max-width: 590px) {
  .second-section .section-wrapper .second-section-atributes {
    grid-template-columns: repeat(3, 157px);
  }
}
.second-section .section-wrapper .second-section-atributes .atribute {
  padding: 78px 50px 72px;
  background: linear-gradient(0deg, rgba(100, 123, 100, 0.77) -126%, rgba(100, 123, 100, 0) 24%, rgba(100, 123, 100, 0) 100%), white;
  border-radius: 8px;
  cursor: pointer;
}
.second-section .section-wrapper .second-section-atributes .atribute:hover {
  background-color: #647b64;
  color: white;
}
.second-section .section-wrapper .second-section-atributes .atribute:hover svg path {
  fill: white;
}
.second-section .section-wrapper .second-section-atributes .atribute:hover .atribute-title {
  color: white;
}
.second-section .section-wrapper .second-section-atributes .atribute:hover .atribute-text {
  color: white;
}
.second-section .section-wrapper .second-section-atributes .atribute:first-of-type {
  position: relative;
}
.second-section .section-wrapper .second-section-atributes .atribute:first-of-type::after {
  position: absolute;
  content: url("./images/Dots.svg");
  z-index: -1;
  top: 137px;
  left: -37px;
}
@media (max-width: 590px) {
  .second-section .section-wrapper .second-section-atributes .atribute:first-of-type::after {
    transform: scale(0.5);
    top: 35px;
    left: -72px;
  }
}
.second-section .section-wrapper .second-section-atributes .atribute:last-of-type {
  position: relative;
}
.second-section .section-wrapper .second-section-atributes .atribute:last-of-type::after {
  position: absolute;
  content: "";
  background: linear-gradient(360deg, rgba(239, 128, 49, 0) 0%, rgba(239, 128, 49, 0.15) 2%, rgba(239, 128, 49, 0) 100%);
  z-index: -1;
  width: 100vw;
  height: 182px;
  top: 169px;
  left: 150px;
}
.second-section .section-wrapper .second-section-atributes .atribute .atribute-title {
  text-transform: uppercase;
  color: #333333;
  font-size: 24px;
  font-weight: 500;
  margin-top: 24px;
  margin-bottom: 6px;
}
@media (max-width: 590px) {
  .second-section .section-wrapper .second-section-atributes .atribute .atribute-title {
    font-size: 12px;
  }
}
.second-section .section-wrapper .second-section-atributes .atribute .atribute-text {
  color: #4f4f4f;
  line-height: 1.32;
}
/* ... */

